--- a/orm/configs/config.json
+++ b/orm/configs/config.json
@@ -1,32 +1,26 @@
 {
   "development": {
-    "username": "uspmzm0ptrbese3z",
-    "password": "KF4x4zCvcm8rMWAU4uGR",
-    "database": "bnfboiqzp7twcteh0dhx",
-    "host": "bnfboiqzp7twcteh0dhx-mysql.services.clever-cloud.com",
+    "username": "root",
+    "password": null,
+    "database": "baomat",
+    "host": "127.0.0.1",
     "dialect": "mysql",
     "define":{
       "freezeTableName":true
     }
   },
   "test": {
-    "username": "uspmzm0ptrbese3z",
-    "password": "KF4x4zCvcm8rMWAU4uGR",
-    "database": "bnfboiqzp7twcteh0dhx",
-    "host": "bnfboiqzp7twcteh0dhx-mysql.services.clever-cloud.com",
-    "dialect": "mysql",
-    "define":{
-      "freezeTableName":true
-    }
+    "username": "root",
+    "password": null,
+    "database": "database_test",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
   },
   "production": {
-    "username": "uspmzm0ptrbese3z",
-    "password": "KF4x4zCvcm8rMWAU4uGR",
-    "database": "bnfboiqzp7twcteh0dhx",
-    "host": "bnfboiqzp7twcteh0dhx-mysql.services.clever-cloud.com",
-    "dialect": "mysql",
-    "define":{
-      "freezeTableName":true
-    }
+    "username": "root",
+    "password": null,
+    "database": "database_production",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
   }
 }
