--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
-    "sequelize": "^6.37.1",
+    "sequelize": "^6.37.1"
+  },
+  "devDependencies": {
     "sequelize-cli": "^6.6.2"
   }
 }
