--- a/orm/configs/config.json
+++ b/orm/configs/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "baomat",
-    "host": "127.0.0.1",
+    "username": "uspmzm0ptrbese3z",
+    "password": "KF4x4zCvcm8rMWAU4uGR",
+    "database": "bnfboiqzp7twcteh0dhx",
+    "host": "bnfboiqzp7twcteh0dhx-mysql.services.clever-cloud.com",
     "dialect": "mysql",
     "define":{
       "freezeTableName":true
@@ -17,10 +17,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "bnfboiqzp7twcteh0dhx-mysql.services.clever-cloud.com",
+    "password": "KF4x4zCvcm8rMWAU4uGR",
+    "database": "bnfboiqzp7twcteh0dhx",
+    "host": "bnfboiqzp7twcteh0dhx-mysql.services.clever-cloud.com",
     "dialect": "mysql"
   }
 }
