--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
+    "escape-html": "^1.0.3",
     "express": "^4.18.3",
     "gitignore": "^0.7.0",
     "helmet": "^7.1.0",
@@ -23,6 +25,7 @@
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.2",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.1"
   },
